src/styles/main.scss
@import "foundation_settings";
@import "foundation";
@import "hawk_settings";
@import "compass/css3";

/***** Generic Page Layout *****/

// Thanks - http://getbootstrap.com/examples/sticky-footer-navbar/

#hawk {
  height: 100%;
}

.hawk-wrapper {
  height: 100%;
}

.nav-wrapper {
  border-bottom: 1px solid $gainsboro;

  .top-bar li.name {
    padding-left: 24px;
    background-image: url(../img/hawk.png);
    background-position: left 8px;
    background-repeat: no-repeat; 
    background-size: 32px;
  }

  .top-bar li.name a {
    color: $primary-color-dark;
  }

  .top-bar-section ul li > a {
    transition: color 0.2s ease 0s;
  }

  @media #{$medium-up} {
    .top-bar {
      padding: 0 1rem;
    }

    .top-bar-section ul.dropdown {
      margin-top: -5px;
      padding: 0.5rem 0;
      position: relative;
      background: $ghost;
      border: 1px solid $iron;
      border-radius: $global-radius;
      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.176);
    } 

    .top-bar-section ul.dropdown:after, 
    .top-bar-section ul.dropdown:before { 
      bottom: 100%; 
      right: 0%;
      border: solid transparent;
      content: " ";
      height: 0;
      width: 0;
      position: absolute;
      pointer-events: none;
    } 

    .top-bar-section ul.dropdown:after { 
      border-color: rgba(250, 250, 250, 0);
      border-bottom-color: $ghost;
      border-width: 6px;
      margin-right: 14px;
    } 

    .top-bar-section ul.dropdown:before { 
      border-color: rgba(204, 204, 204, 0);
      border-bottom-color: $iron; 
      border-width: 7px;
      margin-right: 13px;
    }

    .top-bar-section ul.dropdown {
      li a {
        line-height: 2rem;
      }
    }
  }
}

.content-wrapper {
  height: 100%;
}

@mixin content {

}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding-bottom: 0.5rem;

  .footer-content {
    line-height: $topbar-height;
    font-size: 90%;
  }
}

span.primary {
  color: $primary-color-dark;
}

.cover-image {
  width: 100%;
  height: 0;
  padding-bottom: 100%;
  border: 1px solid $gainsboro;
  background-color: $white-smoke;
  background-image: url(../img/cd.png);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 95%;
}

/***** Home Page *****/

.home {
  min-height: 100%;
  position: relative;
  padding: $topbar-height 0;
  // http://sixrevisions.com/css/responsive-background-image/
  background-image: url(../img/northern_hawk_finland-wide.jpg), url(../img/northern_hawk_finland-small.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;

  h3 {
    font-weight: $font-weight-bold;
  }

  h6 {
    margin-top: 0;
  }

  h6.error {
    color: $grapefruit-light;
  }

  input {
    @include input-placeholder {
      font-weight: $font-weight-normal;
    }
  }

  .welcome {
    margin-bottom: $topbar-height;
  }
}

@mixin ghost-block {
  background-color: rgba($ghost, 0.7);
  @include radius;
  padding: 1rem;
  margin-bottom: 1rem;
}

.login-form {
  @include ghost-block;
}

.signup-form {
  @include ghost-block;
}

/***** Release Feed Page *****/

.feed {
  padding: 1rem 0;

  ul {
    margin: 0;
  }

  .feed-item {
    margin: 1rem 0;
  }

  h4 {
    color: $primary-color-dark;
  }

  h6 {
    color: $charcoal;
  }
}


/***** Watch an Artist Page *****/

.watch {
  padding-top: 1rem;

  @mixin big-input {
    font-size: 3.5rem;
    background: none;
    border: none;
    border-bottom: 1px solid $gainsboro;
    font-weight: $font-weight-normal;

    @include input-placeholder {
      color: $placeholder-color;
    }
  }

  .input-artist {
    @include big-input;
    box-shadow: none;
    height: auto;
    color: $steel;
    margin-bottom: 0;
  }

  .input-artist:focus {
    @include big-input;
  }

  .loading-svg {
    display: block;
  }

  .loading-svg-line {
    stroke: $primary-color-dark;
    stroke-width: 1.5px;
  }

  .artist-selector {
    padding: 2rem 0;
  }

  .artist-list {
    margin: 0;
  }

  .artist {
    height: 68px;
    position: relative;
    background: none;
    list-style: none;
    border: 1px solid $body-bg;
    border-right: 1px solid $gainsboro;
  }

  .artist-spacer {
    height: 24px;
    list-style: none;
    border-right: 1px solid $gainsboro;
  }

  .artist.active {
    position: relative;
    background: #F5F5F5;
    border: 1px solid $gainsboro;
    border-left: 1px solid $body-bg;
  }

  .artist.active:after,
  .artist.active:before {
      left: 100%;
      top: 50%;
      border: solid transparent;
      content: " ";
      height: 0;
      width: 0;
      position: absolute;
      pointer-events: none;
  }

  .artist.active:after {
      border-color: rgba(245, 245, 245, 0);
      border-left-color: #F5F5F5;
      border-width: 34px;
      margin-top: -34px;
  }

  .artist.active:before {
      border-color: rgba(221, 221, 221, 0);
      border-left-color: $gainsboro;
      border-width: 35px;
      margin-top: -35px;
  }

  .artist h4 {
    margin: 0;
    line-height: 68px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    float: left;
    width: 100%;
  }

  .artist.active h4 {
    color: $primary-color-dark;
  }

  .artist .button.ghost,
  .artist .button.ghost:hover {
    line-height: 26px;
    margin: 20px 0;
    border: 1px solid $pinkrose-dark;
    font-size: 0.6rem;
    padding: 0;
    transition: all 0.2s ease 0s;
    white-space: nowrap;
    width: 90%;

    @media #{$medium-up} {
      padding: 0 0.4rem;
      font-size: 0.8rem;
    }
  }

  .artist .button.ghost,
  .artist .button.ghost.watching:hover {
    background: none;
    color: $pinkrose-dark;
  }

  .artist .button.ghost:hover,
  .artist .button.ghost.watching {
    color: $ghost;
    background-color: $pinkrose-light;
    transition: all 0.2s ease 0s;
  }

  .release-list {
    padding-left: 2rem;
  }

  .release {
    margin-bottom: 1rem;
  }

  .release h5 {
    @media #{$small-only} {
      font-size: 1.0rem;
    }
  }

  .release h6 {
    color: $charcoal;
    @media #{$small-only} {
      font-size: 0.8rem;
    }
  }
}

